fix: change vh to 100 on main, so the background is always visible.

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
   font-weight: 400;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   margin: 0;
+}
+
+main {
+  height: 100vh;
 }
